frontend/test/should_fail/index_missing_where_index_expected.grg
rule i(ref s:set<Node>) {
	if{ nodesFromIndex(s).size() > 0; }
	
	modify {
	}
}
